--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "yarn eslint src/**/*.ts",
     "build": "yarn babel src/ --out-dir .dist --extensions '.ts' --quiet",
     "start": "yarn migration && yarn build && node .dist/main " ,
-    "migration": "npx prisma db push"
+    "migration": "npx prisma db push --preview-feature"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
